# rs.x-paths

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml
src/: fs.rs  main.rs
